push everything, started refactoring :pog: